--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "antd": "^4.17.2",
     "autocompleter": "^6.1.2",
     "axios": "^0.24.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "less-vars-to-js": "^1.3.0",
     "moralis": "0.0.80",
     "next": "11.0.1",
+    "next-with-less": "^2.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-moralis": "^0.3.0",
