--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@openzeppelin/test-helpers": "^0.5.13",
+    "@types/node": "^17.0.0",
+    "@types/react": "^17.0.37",
     "antd": "^4.17.2",
     "autocompleter": "^6.1.2",
     "axios": "^0.24.0",
@@ -26,20 +28,22 @@
     "react-dom": "17.0.2",
     "react-moralis": "^0.3.0",
     "sass": "^1.38.1",
+    "typescript": "^4.5.4",
     "web3modal": "^1.9.3"
   },
   "devDependencies": {
-    "eslint": "7.31.0",
-    "eslint-config-next": "11.0.1",
     "@openzeppelin/contracts": "^4.0.0",
     "@truffle/hdwallet-provider": "1.2.6",
+    "@walletconnect/client": "^1.5.2",
+    "@walletconnect/web3-provider": "^1.5.2",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-bn": "^0.2.1",
     "dotenv": "^8.2.0",
+    "eslint": "7.31.0",
+    "eslint-config-next": "11.0.1",
     "eth-gas-reporter": "^0.2.22",
-    "web3": "^1.3.4",
-    "@walletconnect/client": "^1.5.2",
-    "@walletconnect/web3-provider": "^1.5.2"
+    "web3": "^1.3.4"
   }
 }
